--- a/src/assets/styles/cmps/Sidebar.scss
+++ b/src/assets/styles/cmps/Sidebar.scss
@@ -17,7 +17,7 @@
   flex-direction: column;
 
   &.collapsed {
-    width: $sidebar-collapsed-width;
+    width: var(--sidebar-collapsed-width);
   }
 
   .sidebar-toggle {
